<resources>
    <string name="app_name">hr_engaging</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="profilename">Rabeya Tasleem</string>
    <string name="profileemail">bscs2012401@szabist.pk</string>
    <string name="profilepassword">**********</string>
    <string name="profilecountry">Select your country</string>
    <string name="profilecity">Select your city</string>
    <string name="profileprofession">Select your profession</string>

    <string name="default_web_client_id">your_web_client_id_here</string>


    <string name="searchtxt">Search Companies or Users</string>
    <string name="welcometxt">Hi, Welcome!</string>
    <string name="dreamjob">Find your dream job</string>
    <string name="jobtxt">Works just for you</string>
    <string name="jobtxt2">Apply the job that suits you</string>


    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


</resources>