<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <!-- Sidebar Menu -->
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"


        app:itemIconTint="@color/dark_purple"
        app:itemTextColor="@color/dark_grey"/>

    <!-- Main Content -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:id="@+id/toolbar"
            android:elevation="4dp"
            android:background="@color/dark_purple"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"/>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color"
        tools:context=".MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/purple_bg" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_300sdp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginStart="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_21sdp"
                android:layout_marginEnd="@dimen/_50sdp"
                app:cardCornerRadius="@dimen/_30sdp"
                app:strokeWidth="0.3dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/searchtxt"
                        android:textColor="@color/dark_grey"
                        android:layout_marginStart="@dimen/_18sdp"
                        android:layout_marginEnd="@dimen/_18sdp"
                        android:textSize="@dimen/_11ssp"
                        android:fontFamily="@font/opensans_regular"
                        android:singleLine="true"
                        android:layout_marginTop="@dimen/_10sdp" />

                    <ImageView
                        android:layout_width="@dimen/_13sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/search"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_16sdp" />


                </RelativeLayout>
            </com.google.android.material.card.MaterialCardView>
            <ImageView
                android:layout_width="@dimen/_23sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/chat_icon"
                android:layout_marginEnd="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_12sdp"
                android:layout_alignParentRight="true" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcometxt"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_90sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textSize="@dimen/_20ssp"
                android:fontFamily="@font/opensans_bold"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dreamjob"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginTop="@dimen/_115sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:textSize="@dimen/_10ssp"
                android:fontFamily="@font/opensans_semibold"
                android:textColor="@color/light_grey"/>


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_75sdp"
                android:background="@drawable/job_img"
                android:layout_marginTop="@dimen/_140sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_160sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/opensans_bold"
                android:layout_marginStart="@dimen/_162sdp"
                android:singleLine="true"
                android:text="@string/jobtxt"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:layout_marginLeft="@dimen/_162sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_177sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:fontFamily="@font/opensans_semibold"
                android:layout_marginStart="@dimen/_167sdp"
                android:singleLine="true"
                android:text="@string/jobtxt2"
                android:textColor="@color/black"
                android:textSize="@dimen/_7ssp"
                android:layout_marginLeft="@dimen/_167sdp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_350sdp"
                android:layout_alignParentBottom="true"
                app:cardCornerRadius="@dimen/_35sdp"
                android:layout_marginBottom="-10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_5sdp">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/_390sdp">
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_purple"
                    android:layout_marginTop="@dimen/_280sdp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_295sdp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/home" />

                    <View
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/jobs" />

                    <View
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp" />

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/notifications" />

                    <View
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginEnd="@dimen/_10sdp" />

                    <ImageView
                        android:id="@+id/editprofile"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:background="@drawable/profile" />


                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignBottom="@+id/imageView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="13dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="31dp"
                app:srcCompat="@drawable/hr_logo"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="13dp"
                android:layout_marginRight="15dp"
                android:clickable="true"
                android:onClick="openSidebar" />

        </RelativeLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.drawerlayout.widget.DrawerLayout>