<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/purple_bg"></ImageView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="42dp"
        app:srcCompat="@drawable/hr_logo" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="@dimen/_33sdp"
        android:layout_marginBottom="-25dp"

        android:layout_marginTop="20dp">



        <LinearLayout
            android:layout_width="@dimen/_310sdp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-5dp"
            android:orientation="vertical"
            android:padding="37dp"
            android:layout_gravity="center">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:text="Create your account"
                android:textColor="@color/dark_purple"
                android:textSize="29sp"
                android:textStyle="bold"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="Please provide your information to create an account"
                android:textColor="@color/light_purple"
                android:textSize="12sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:fontFamily="@font/opensans_bold"
                android:labelFor="@id/fullname"
                android:text="@string/fullname"
                android:textColor="@color/light_grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/opensans_bold"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:labelFor="@id/email"
                android:text="@string/email_address"
                android:textColor="@color/light_grey"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/opensans_bold"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:labelFor="@id/password"
                android:text="@string/password"
                android:textColor="@color/light_grey"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="none"
                style="@style/Widget.Design.TextInputLayout"
                >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/opensans_bold"
                    app:backgroundTint="@color/black"
                    app:passwordToggleTint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_bold"
                android:labelFor="@id/confirmpassword"
                android:text="@string/confirm_password"
                android:textColor="@color/light_grey"
                android:textStyle="bold" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:boxBackgroundMode="none"
                style="@style/Widget.Design.TextInputLayout"
                >
                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:fontFamily="@font/opensans_bold"
                    app:backgroundTint="@color/black"
                    app:passwordToggleTint="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:backgroundTint="@color/dark_purple"
                android:fontFamily="@font/opensans_regular"
                android:text="SIGN UP"
                app:backgroundTint="#59239E"
                app:cornerRadius="32dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_regular"
                android:text="OR"
                android:textColor="@color/dark_purple" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btnGoogle"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/google_logo"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Login with google"
                    android:textColor="@color/dark_purple"
                    android:fontFamily="@font/opensans_regular"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_40sdp"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="Don't have an account?"
                    android:textColor="@color/light_purple" />

                <TextView
                    android:id="@+id/logintxt"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/opensans_bold"
                    android:onClick="sendlogin"
                    android:text=" Login"
                    android:textColor="@color/dark_purple" />


            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>